--- a/source.html
+++ b/source.html
@@ -9,7 +9,7 @@
                <link rel="stylesheet" href="./fonts/all.min.css">
                <link rel="stylesheet" href="./style/sourceStyle.css">
                <link rel="stylesheet" href="./style/media.css">
-               <title>My Portfolio</title>
+               <title>Empty link</title>
 </head>
 
 <body>
