--- a/submission.html
+++ b/submission.html
@@ -8,7 +8,7 @@
                <link rel="stylesheet" href="./fonts/all.min.css">
                <link rel="stylesheet" href="./style/style.css">
                <link rel="stylesheet" href="./style/media.css">
-               <title>My Portfolio</title>
+               <title>submission</title>
 </head>
 <body>
                <div class="submission">
